--- a/style/common.css
+++ b/style/common.css
@@ -7,6 +7,7 @@
 header,
 main,
 footer {
+  min-width: 300px;
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px 100px 0;
@@ -20,14 +21,6 @@ h4,
 h5,
 h6 {
   font-family: "Merriweather", serif;
-}
-
-@media (max-width: 450px) {
-  header,
-  main,
-  footer {
-    padding: 20px 20px 0;
-  }
 }
 
 a {
@@ -45,4 +38,12 @@ footer {
   margin-top: 20px;
   display: flex;
   justify-content: space-around;
+}
+
+@media (max-width: 800px) {
+  header,
+  main,
+  footer {
+    padding: 20px 20px 0;
+  }
 }
